# microservices

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pb/: main.proto  main_pb2.py  main_pb2_grpc.py
service_client/: Dockerfile  main_client.py
service_server/: Dockerfile  main_server.py
